Make sure the list of updateable packages is updated when the state changes

Solves an off-by-one issue when the signal was emitted too early, before
the package was removed.

BUG: 363028